tests/compile-fail/fn_associated_const.rs

extern crate auto_impl;
use auto_impl::auto_impl;


#[auto_impl(Fn)]
trait Foo {
    const LEN: usize;

    fn a(&self);
}
