tests/compile-fail/fn_associated_const.stderr
error: this trait cannot be auto-implemented for Fn-traits (only traits with exactly one method and no other items are allowed)

note: auto-impl requested here
 --> $DIR/fn_associated_const.rs:5:1
  |
5 | trait Foo {
  | ^^^^^
